--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     colors: {
                         primary: '#ABEF5F',
                         secondary: '#ABEF5F80',
+                        black_1: '#212121',
                         black_2: '#1C1C1C',
+                        text_1: '#494949',
                         text_2: '#737373',
                     },
                     fontFamily: {
@@ -58,16 +60,17 @@
                                     class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Home</a>
                             </li>
                             <li><a
-                                    class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">About</a>
+                                    class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Services</a>
                             </li>
                             <li><a
-                                    class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Pages</a>
+                                    class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Portfolio</a>
                             </li>
                             <li><a
                                     class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Blog</a>
                             </li>
                             <li><a
-                                    class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Contact</a>
+                                    class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Contact
+                                    Us</a>
                             </li>
                         </ul>
                     </div>
@@ -111,7 +114,23 @@
             </nav>
             <!-- navbar end  -->
             <!-- Banner start -->
-            <section>
+            <section class="py-10 md:py-15 lg:py-20">
+                <div class="space-y-3 md:space-y-4 lg:space-y-5">
+                    <img class="mx-auto" src="assets/banner.png" alt="">
+                    <h1
+                        class="text-2xl md:text-4xl lg:text-6xl text-black_1 font-extrabold w-10/12 mx-auto text-center">
+                        A barn house of this design has a striking appearance</h1>
+                    <p class="text-sm lg:text-base font-medium text-text_1 md:w-9/12 md:mx-auto text-center">The barn
+                        house captivates with its blend of rustic charm and modern sophistication, featuring weathered
+                        wood, sleek
+                        metal accents, and large windows that flood the space with natural light.</p>
+                    <div class="flex justify-center">
+                        <a class="btn bg-secondary text-balack_2 font-extrabold md:px-4 lg:px-5 rounded-full w-10/12 md:w-5/12 lg:w-3/12">
+                            View Details
+                            <i class="fa-solid fa-arrow-right-long -rotate-45 bg-primary text-black_2 p-2 rounded-full"></i>
+                        </a>
+                    </div>
+                </div>
 
             </section>
             <!-- Banner end -->
@@ -120,27 +139,33 @@
     <!-- header section end  -->
     <!-- main section start -->
     <main class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20">
-        <!-- Professional Hockeys section start -->
-        <section class="my-10 md:my-15 lg:my-24  text-center">
-            <!-- section title start-->
-            <div class="border-y-2 border-dashed space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8">
-                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, liveable spaces</h2>
-                <p class="text-xs md:text-sm lg:text-base text-gray-400 md:w-1/2 font-medium mx-auto">The barn house
-                    captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
-                    metal accents.</p>
-            </div>
-            <!-- section title end-->
-            <!-- progress start -->
+        <!--We design section start  -->
+        <section class="my-10 md:my-15 lg:my-24 ">
 
         </section>
-        <!-- Professional Hockeys section end -->
+        <!--We design section end  -->
 
     </main>
     <!-- main section end  -->
     <!-- footer section start -->
-    <footer class="bg-secondary">
+    <footer class="bg-black_2">
         <section
             class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
+
+            <!-- Professional Hockeys section start -->
+            <section class="my-10 md:my-15 lg:my-24 ">
+                <!-- section title start-->
+                <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center">
+                    <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, liveable spaces</h2>
+                    <p class="text-xs md:text-sm lg:text-base text-gray-400 md:w-1/2 font-medium mx-auto">The barn house
+                        captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
+                        metal accents.</p>
+                </div>
+                <!-- section title end-->
+                <!-- progress start -->
+            
+            </section>
+            <!-- Professional Hockeys section end -->
 
         </section>
     </footer>
