--- a/index.html
+++ b/index.html
@@ -124,10 +124,12 @@
                         house captivates with its blend of rustic charm and modern sophistication, featuring weathered
                         wood, sleek
                         metal accents, and large windows that flood the space with natural light.</p>
-                    <div class="flex justify-center">
-                        <a class="btn bg-secondary text-balack_2 font-extrabold md:px-4 lg:px-5 rounded-full w-10/12 md:w-5/12 lg:w-3/12">
+                    <div class="flex justify-center ">
+                        <a
+                            class="btn bg-secondary text-balack_2 font-extrabold rounded-full w-10/12 md:w-5/12 lg:w-3/12">
                             View Details
-                            <i class="fa-solid fa-arrow-right-long -rotate-45 bg-primary text-black_2 p-2 rounded-full"></i>
+                            <i
+                                class="fa-solid fa-arrow-right-long -rotate-45 bg-primary text-black_2 p-2 rounded-full"></i>
                         </a>
                     </div>
                 </div>
@@ -139,11 +141,47 @@
     <!-- header section end  -->
     <!-- main section start -->
     <main class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20">
-        <!--We design section start  -->
+        <!--About Us section start  -->
         <section class="my-10 md:my-15 lg:my-24 ">
-
+            <img class="-ms-10 hidden lg:flex" src="assets/Vector.png" alt="">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 lg:items-center">
+                <div class="">
+                    <!-- section title start-->
+                    <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center lg:text-left">
+                        <button class="text-sm lg:text-base text-text_1 bg-white rounded-full px-4 py-2 font-bold "><i
+                                class="fa-solid fa-arrow-right-long me-2"></i>About Us</button>
+                        <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, live able
+                            spaces</h2>
+                        <p class="text-xs md:text-sm lg:text-base text- font-medium text-text_1 ">We have over 25 years
+                            of experience in designing and installing all manner of interior projects from tiny terrace
+                            seaside cottages to rolling country houses.</p>
+                    </div>
+                    <!-- section title end-->
+                    <div class="flex flex-col md:flex-row lg:flex-col gap-5">
+                        <div class="flex gap-5 p-3 md:p-4 lg:p-5 border-2 rounded-lg bg-white">
+                            <img src="assets/commercial.png" alt="">
+                            <div class="space-y-2">
+                                <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Commercial</h4>
+                                <p class="text-sm lg:text-base text-text_2 font-medium lg:w-10/12 ">Offices are a common
+                                    focus of these professionals.</p>
+                            </div>
+                        </div>
+                        <div class="flex gap-5 p-3 md:p-4 lg:p-5 border-2 rounded-lg bg-white">
+                            <img src="assets/residential.png" alt="">
+                            <div class="space-y-2">
+                                <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Residential</h4>
+                                <p class="text-sm lg:text-base text-text_2 font-medium lg:w-10/12 ">The art of creating
+                                    aesthetic and functional living spaces.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img class="w-full" src="assets/Rectangle.png" alt="">
+                </div>
+            </div>
         </section>
-        <!--We design section end  -->
+        <!--About Us section end  -->
 
     </main>
     <!-- main section end  -->
@@ -152,20 +190,16 @@
         <section
             class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
 
-            <!-- Professional Hockeys section start -->
-            <section class="my-10 md:my-15 lg:my-24 ">
-                <!-- section title start-->
-                <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center">
-                    <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, liveable spaces</h2>
-                    <p class="text-xs md:text-sm lg:text-base text-gray-400 md:w-1/2 font-medium mx-auto">The barn house
-                        captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
-                        metal accents.</p>
-                </div>
-                <!-- section title end-->
-                <!-- progress start -->
-            
-            </section>
-            <!-- Professional Hockeys section end -->
+            <!-- section title start-->
+            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center">
+                <button class="text-sm lg:text-base text-text_1 bg-white rounded-full px-4 py-2 font-bold "><i
+                        class="fa-solid fa-arrow-right-long me-2"></i>About Us</button>
+                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, liveable spaces</h2>
+                <p class="text-xs md:text-sm lg:text-base text- font-medium text-text_1 ">The barn house
+                    captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
+                    metal accents.</p>
+            </div>
+            <!-- section title end-->
 
         </section>
     </footer>
