--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="text-md sm:text-xl md:text-2xl lg:text-3xl font-extrabold">Rinterio</a>
                     </div>
                     <div class="navbar-center hidden lg:flex">
-                        <ul class="menu menu-horizontal px-1 space-x-5">
+                        <ul class="menu menu-horizontal px-1 ">
                             <li><a
                                     class="hover:text-black_2 text-text_2 rounded-full text-xs md:text-sm lg:text-base font-normal">Home</a>
                             </li>
@@ -152,7 +152,7 @@
                                 class="fa-solid fa-arrow-right-long me-2"></i>About Us</button>
                         <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, live able
                             spaces</h2>
-                        <p class="text-xs md:text-sm lg:text-base text- font-medium text-text_1 ">We have over 25 years
+                        <p class="text-sm lg:text-base text- font-medium text-text_1 ">We have over 25 years
                             of experience in designing and installing all manner of interior projects from tiny terrace
                             seaside cottages to rolling country houses.</p>
                     </div>
@@ -182,22 +182,66 @@
             </div>
         </section>
         <!--About Us section end  -->
-
+        <!-- How we works section start -->
+        <section class="my-10 md:my-15 lg:my-24 ">
+            <!-- section title start-->
+            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
+                <button class="text-sm lg:text-base text-text_1 bg-white rounded-full px-4 py-2 font-bold "><i
+                        class="fa-solid fa-arrow-right-long me-2"></i>How we works</button>
+                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">Our Works Process</h2>
+                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">The spaces, parts,
+                    components or
+                    elements of an individual dwelling unit. Work or Works means the works to be executed
+                    or done under this contract.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 my-10">
+                <div class="bg-[#E7C1D3] p-5 rounded-lg space-y-3">
+                    <img src="assets/concept.png" alt="">
+                    <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Concept</h4>
+                    <p class="text-sm lg:text-base text-text_1 font-medium  ">An interior design concept is
+                        the
+                        central theme that all the design elements are focused upon.</p>
+                </div>
+                <div class="bg-[#EFDA6E] p-5 rounded-lg space-y-3">
+                    <img src="assets/flow-chart.png" alt="">
+                    <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Design Process</h4>
+                    <p class="text-sm lg:text-base text-text_1 font-medium  ">First, your interior designer will create
+                        a specifications notebook for the general contractor.</p>
+                </div>
+                <div class="bg-[#A4DAC3] p-5 rounded-lg space-y-3">
+                    <img src="assets/vision.png" alt="">
+                    <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Supervision</h4>
+                    <p class="text-sm lg:text-base text-text_1 font-medium  ">Supervision is a process
+                        should control implementation of all the tasks from
+                        design</p>
+                </div>
+                <div class="bg-[#77AAEA] p-5 rounded-lg space-y-3">
+                <img src="assets/budget-planning.png" alt="">
+                <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Budget Planning</h4>
+                <p class="text-sm lg:text-base text-text_1 font-medium  ">The budget needs to be a rough figure for the
+                    entire project. This includes building works</p>
+            </div>
+            </div>
+            <!-- section title end-->
+        </section>
+        <!-- How we works section end -->
     </main>
     <!-- main section end  -->
+    <!--  -->
     <!-- footer section start -->
     <footer class="bg-black_2">
         <section
             class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
 
             <!-- section title start-->
-            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center">
+            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
                 <button class="text-sm lg:text-base text-text_1 bg-white rounded-full px-4 py-2 font-bold "><i
                         class="fa-solid fa-arrow-right-long me-2"></i>About Us</button>
-                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, liveable spaces</h2>
-                <p class="text-xs md:text-sm lg:text-base text- font-medium text-text_1 ">The barn house
-                    captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek
-                    metal accents.</p>
+                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, live able
+                    spaces</h2>
+                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-10/12 mx-auto">We have over 25 years
+                    of experience in designing and installing all manner of interior projects from tiny terrace
+                    seaside cottages to rolling country houses.</p>
             </div>
             <!-- section title end-->
 
