--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                     <!-- section title end-->
                     <div class="flex flex-col md:flex-row lg:flex-col gap-5">
-                        <div class="flex gap-5 p-3 md:p-4 lg:p-5 border-2 rounded-lg bg-white">
+                        <div class="flex gap-5 p-3 md:p-4 lg:p-5 border-2 rounded-xl bg-white">
                             <img src="assets/commercial.png" alt="">
                             <div class="space-y-2">
                                 <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Commercial</h4>
@@ -166,7 +166,7 @@
                                     focus of these professionals.</p>
                             </div>
                         </div>
-                        <div class="flex gap-5 p-3 md:p-4 lg:p-5 border-2 rounded-lg bg-white">
+                        <div class="flex gap-5 p-3 md:p-4 lg:p-5 border-2 rounded-xl bg-white">
                             <img src="assets/residential.png" alt="">
                             <div class="space-y-2">
                                 <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Residential</h4>
@@ -196,30 +196,31 @@
             </div>
             <!-- section title end-->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 my-10">
-                <div class="bg-[#E7C1D3] p-5 rounded-lg space-y-3">
+                <div class="bg-[#E7C1D3] p-5 rounded-xl space-y-3">
                     <img src="assets/concept.png" alt="">
                     <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Concept</h4>
                     <p class="text-sm lg:text-base text-text_1 font-medium  ">An interior design concept is
                         the
                         central theme that all the design elements are focused upon.</p>
                 </div>
-                <div class="bg-[#EFDA6E] p-5 rounded-lg space-y-3">
+                <div class="bg-[#EFDA6E] p-5 rounded-xl space-y-3">
                     <img src="assets/flow-chart.png" alt="">
                     <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Design Process</h4>
                     <p class="text-sm lg:text-base text-text_1 font-medium  ">First, your interior designer will create
                         a specifications notebook for the general contractor.</p>
                 </div>
-                <div class="bg-[#A4DAC3] p-5 rounded-lg space-y-3">
+                <div class="bg-[#A4DAC3] p-5 rounded-xl space-y-3">
                     <img src="assets/vision.png" alt="">
                     <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Supervision</h4>
                     <p class="text-sm lg:text-base text-text_1 font-medium  ">Supervision is a process
                         should control implementation of all the tasks from
                         design</p>
                 </div>
-                <div class="bg-[#77AAEA] p-5 rounded-lg space-y-3">
+                <div class="bg-[#77AAEA] p-5 rounded-xl space-y-3">
                     <img src="assets/budget-planning.png" alt="">
                     <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold">Budget Planning</h4>
-                    <p class="text-sm lg:text-base text-text_1 font-medium  ">The budget needs to be a rough figure for the
+                    <p class="text-sm lg:text-base text-text_1 font-medium  ">The budget needs to be a rough figure for
+                        the
                         entire project. This includes building works</p>
                 </div>
             </div>
@@ -227,7 +228,105 @@
         <!-- How we works section end -->
     </main>
     <!-- main section end  -->
-    <!--  -->
+    <!-- Explore our Latest works start -->
+    <section class="lg:bg-white">
+        <div class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
+            <!-- section title start-->
+            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
+                <button class="text-sm lg:text-base text-text_1 bg-[#ABEF5F50] rounded-full px-4 py-2 font-bold "><i
+                        class="fa-solid fa-arrow-right-long me-2"></i>Explore our Latest works</button>
+                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">Our Latest Portfolio</h2>
+                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">Portfolio should contain
+                    an About section that is essentially an introduction to you as an interior design professional and
+                    your work in the field.</p>
+            </div>
+            <!-- section title end-->
+            <!-- item-1 -->
+            <div class="grid grid-cols-1 md:grid-cols-2  lg:grid-cols-6 gap-5 mb-5">
+                <div class="p-4 rounded-xl border-2 md:col-span-2 lg:col-span-4 ">
+                    <div class="flex flex-col md:flex-row gap-5 md:items-center">
+                        <div class="md:w-2/6">
+                            <img class="w-full h-full lg:h-[190px]" src="assets/img1.png" alt="">
+                        </div>
+                        <div class="space-y-2 md:w-4/6">
+                            <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Concept</h4>
+                            <p class="text-sm lg:text-base text-text_1 font-medium  ">An interior design concept is
+                                the
+                                central theme that all the design elements are focused upon.</p>
+                            <button class=" text-balack_2 font-extrabold  ">
+                                View Details
+                                <i
+                                    class="fa-solid fa-arrow-right-long -rotate-45 bg-primary text-black_2 p-2 rounded-full"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-4 rounded-xl border-2 lg:col-span-2">
+                    <img class="w-full h-full lg:h-[190px]" src="assets/img2.png" alt="">
+                </div>
+                <div class="p-4 rounded-xl border-2 lg:hidden">
+                    <img class="w-full h-full lg:h-[190px]" src="assets/img5.png" alt="">
+                </div>
+            </div>
+            <!-- item-1 -->
+            <div class="grid grid-cols-1 md:grid-cols-2  lg:grid-cols-5 gap-5">
+                <div class="p-4 rounded-xl border-2 order-2 lg:order-1 ">
+                    <img class="w-full h-full lg:h-[190px]" src="assets/img3.png" alt="">
+                </div>
+                <div class="p-4 rounded-xl border-2 md:col-span-2 lg:col-span-3 order-1 lg:order-2">
+                    <div class="flex flex-col md:flex-row gap-5 md:items-center">
+                        <div class="md:w-2/6">
+                            <img class="w-full h-full lg:h-[190px]" src="assets/img4.png" alt="">
+                        </div>
+                        <div class="space-y-2 md:w-4/6">
+                            <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Concept</h4>
+                            <p class="text-sm lg:text-base text-text_1 font-medium  ">An interior design concept is
+                                the
+                                central theme that all the design elements are focused upon.</p>
+                            <button class=" text-balack_2 font-extrabold  ">
+                                View Details
+                                <i
+                                    class="fa-solid fa-arrow-right-long -rotate-45 bg-primary text-black_2 p-2 rounded-full"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-4 rounded-xl border-2  order-3 ">
+                    <img class="w-full h-full lg:h-[190px]" src="assets/img5.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Explore our Latest works end-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- footer section start -->
     <footer class="bg-black_2">
         <section
@@ -238,7 +337,7 @@
                         class="fa-solid fa-arrow-right-long me-2"></i>About Us</button>
                 <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, live able
                     spaces</h2>
-                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-10/12 mx-auto">We have over 25 years
+                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">We have over 25 years
                     of experience in designing and installing all manner of interior projects from tiny terrace
                     seaside cottages to rolling country houses.</p>
             </div>
