--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <!-- main section end  -->
     <!-- Explore our Latest works start -->
     <section class="lg:bg-white">
-        <div class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
+        <div class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 my-10 md:my-15 lg:my-24 py-10 md:py-12 lg:py-15 ">
             <!-- section title start-->
             <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
                 <button class="text-sm lg:text-base text-text_1 bg-[#ABEF5F50] rounded-full px-4 py-2 font-bold "><i
@@ -249,10 +249,8 @@
                             <img class="w-full h-full lg:h-[190px]" src="assets/img1.png" alt="">
                         </div>
                         <div class="space-y-2 md:w-4/6">
-                            <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Concept</h4>
-                            <p class="text-sm lg:text-base text-text_1 font-medium  ">An interior design concept is
-                                the
-                                central theme that all the design elements are focused upon.</p>
+                            <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Commercial</h4>
+                            <p class="text-sm lg:text-base text-text_1 font-medium  ">Commercial interior designers plan public spaces—government buildings, private businesses, or other corporate entities.</p>
                             <button class=" text-balack_2 font-extrabold  ">
                                 View Details
                                 <i
@@ -279,10 +277,8 @@
                             <img class="w-full h-full lg:h-[190px]" src="assets/img4.png" alt="">
                         </div>
                         <div class="space-y-2 md:w-4/6">
-                            <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Concept</h4>
-                            <p class="text-sm lg:text-base text-text_1 font-medium  ">An interior design concept is
-                                the
-                                central theme that all the design elements are focused upon.</p>
+                            <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Commercial</h4>
+                            <p class="text-sm lg:text-base text-text_1 font-medium  ">Offices are a common focus of these professionals, but they may also work with schools, banks, retail</p>
                             <button class=" text-balack_2 font-extrabold  ">
                                 View Details
                                 <i
@@ -298,8 +294,87 @@
         </div>
     </section>
     <!-- Explore our Latest works end-->
-
-
+    <!-- FAQ section start -->
+    <section class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20">
+        <div class="my-10 md:my-15 lg:my-24 py-10 md:py-12 lg:py-15 bg-white rounded-lg">
+            <!-- section title start-->
+            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
+                <button class="text-sm lg:text-base text-text_1 bg-[#ABEF5F50] rounded-full px-4 py-2 font-bold "><i
+                        class="fa-solid fa-arrow-right-long me-2"></i>Clients Question</button>
+                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">Frequently asked question</h2>
+                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">If you have any
+                    problems, consult the FAQs on our website. Internet terminology. A question in a list of
+                    questions and answers intended to help people.</p>
+            </div>
+            <div class="flex flex-col-reverse md:flex-row md:justify-between md:items-center gap-5 my-12 p-5">
+                <!-- Accordion start-->
+                <div class="md:w-7/12">
+                    <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Equipment</div>
+                        <div class="collapse-content ">
+                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">This usually includes
+                                a helmet, shoulder pads/chest protector, elbow pads, mouth guard, protective gloves,
+                                heavily
+                                padded shorts, a 'jock' athletic protector, shin pads and a neck guard.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Training</div>
+                        <div class="collapse-content">
+                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">Should
+                                absolutely be using squat-based exercises in their workouts. This can & should include
+                                Goblet
+                                Squats</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Private</div>
+                        <div class="collapse-content">
+                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">With private ,
+                                you can definitely
+                                increase your skill level...but you also need to supplement it with real
+                                physical competition as well,</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Touring</div>
+                        <div class="collapse-content">
+                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">touring is skiing
+                                in the backcountry on unmarked or unpatrolled areas. Touring is typically done off-piste
+                                and
+                                outside of ski resorts</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Booking </div>
+                        <div class="collapse-content">
+                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">Will be
+                                available online at Paytm Insider: www.insider.in. Please note, you will need to redeem
+                                your ticket
+                                confirmation for a physical ticket.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Pricing</div>
+                        <div class="collapse-content">
+                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">Pricing is a process
+                                of fixing the value that a manufacturer will receive in the exchange of services and
+                                goods.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="md:w-5/12">
+                    <img class="w-full h-[250px]  md:w-full md:h-full" src="assets/faq.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
